Possible fixes for ipad flickering

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,7 +1,9 @@
 @import 'bourbon/bourbon';
 
+* { outline: none; }
 body {
   font-family: 'PT Sans', sans-serif;
+  -webkit-backface-visibility: hidden;
 }
 a {
   color: #678801;
